apps/epg/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: epg
  namespace: epg
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`epg.lab.jackhumes.com`)
      kind: Rule
      services:
        - name: epg
          port: 3000
  tls:
    secretName: epg-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: epg-http
  namespace: epg
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`epg.lab.jackhumes.com`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: epg
          port: 3000
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: epg
spec:
  redirectScheme:
    scheme: https
    permanent: true
